--- a/docs/static/css/custom.css
+++ b/docs/static/css/custom.css
@@ -1,12 +1,7 @@
 ﻿.pricing-card .price .number::before {
-    content: "";
+    content: "\20BD";
 }
 
 .pricing-card .price .number:after {
-    content: "";
-}
-
-.pricing-card .price .number font {
-    font-size: 40%;
-    margin-left: 3px;
+    content: "/мес.";
 }
